# Projeto-ED

./: .gitignore  CMakeLists.txt  Hashing.c  Hashing.h  Livro.c  Livro.h  Pessoa.c  Pessoa.h  Projecto_ED_23_24.depend  Requisicao.h  main.c  main_backup.c
CSV/: Distritos.csv  Livros.csv  Requisicoes.csv  Requisitantes.csv
XML/: ola.xml
data/: livros.txt  log.txt  requisicoes.txt
data/recursos/: conselhos.txt  distritios.txt  freguesias.txt  requisitantes.txt
src/: Biblioteca.c  Biblioteca.h  Lista.c  Lista.h  Livro.c  Livro.h  Pessoa.c  Pessoa.h  Requisicao.c  Requisicao.h  Uteis.c  Uteis.h  main.c
